infra/thmanyah/ingress/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-network-policy
  namespace: ingress-ns
spec:
  podSelector:
    matchLabels:
      app: ingress-nginx
  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
        # Allow external users
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443

  egress:
    - to:
        # Allow ingress to reach backend services
        - namespaceSelector:
            matchLabels:
              name: api-ns
        - namespaceSelector:
            matchLabels:
              name: auth-ns
        - namespaceSelector:
            matchLabels:
              name: image-ns
      ports:
        - protocol: TCP
          port: 3000
        - protocol: TCP
          port: 4000
        - protocol: TCP
          port: 5000
